# CFD

./: .gitignore  README.md  dump.json
backend/: package-lock.json  package.json  tsconfig.tsbuildinfo
backend/prisma/: schema.prisma
backend/src/: index.ts  middleware.ts  types.d.ts
backend/src/controller/: candle.ts  closeTrade.ts  user.ts
backend/src/manager/: db.ts  redis.ts
backend/src/routes/: balanceRoute.ts  candleRoute.ts  tradeRoute.ts  userRoute.ts
backend/src/services/: mail.ts
backend/src/validation/: trade.ts
engine-rust/: Cargo.toml
engine-rust/src/: main.rs  redis.rs
engine-rust/src/engine/: balancemanager.rs  engine.rs  error.rs  mod.rs  order_response.rs  types.rs
engine-rust/src/serializer/: event.rs  mod.rs
engine-rust/src/types/: event.rs  mod.rs  order.rs  response.rs
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: api.ts
frontend/src/components/: Charts.tsx  CloseOrderPanel.tsx  Navbar.tsx  OrderPanel.tsx  PriceBox.tsx  TogglePanel.tsx  TokenList.tsx  Trade.tsx  userCard.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Market.tsx
mailing/: Dockerfile  README.md  env.example  package.json
mailing/src/: database.ts  index.ts  mailService.ts  types.ts
poller-backpack/: package-lock.json  package.json
poller-backpack/src/: index.ts
polling-server/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
polling-server/src/: index.ts
websocket/: Dockerfile  package.json  tsconfig.tsbuildinfo
websocket/src/: index.ts  wsmanager.ts
(+15 files in other folders)
