[package]
name = "engine-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.24", features = ["tokio-comp"] }
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
serde-redis = "0.14.0"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
